# aru

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  README.md  TESTING.md  arc.json  aru.json  main.py  my_math.py  pyproject.toml
.agents/agents/: reviewer.md
.agents/commands/: hello.md
.agents/rules/: pep-8-style.md
.agents/skills/open-pr/: SKILL.md
.agents/skills/review/: SKILL.md
.agents/skills/update-version/: SKILL.md
.agents/workflows/: end-to-end-feature.md
.claude/: settings.local.json
.github/workflows/: test.yml
arc/: cli.py  config.py
arc/agents/: executor.py  planner.py
arc/tools/: ast_tools.py  codebase.py  gitignore.py  indexer.py  ranker.py
aru/: __init__.py  agent_factory.py  cache_patch.py  checkpoints.py  cli.py  commands.py  completers.py  config.py  context.py  display.py  doom_loop.py  events.py  history_blocks.py  permissions.py  providers.py  runner.py  runtime.py  session.py  sinks.py  streaming.py  tool_policy.py
aru/_debug/: __init__.py  analyze_trace.py  loop_tracer.py
aru/agents/: base.py  catalog.py  executor.py  explorer.py  planner.py
aru/format/: __init__.py  manager.py  runner.py
aru/memory/: __init__.py  extractor.py  loader.py  store.py
aru/plugins/: __init__.py  custom_tools.py  hooks.py  manager.py  tool_api.py
aru/tools/: _diff.py  _shared.py  apply_patch.py  ast_tools.py  codebase.py  delegate.py  delegate_prompt.txt  file_ops.py  gitignore.py  mcp_client.py  ranker.py  registry.py  search.py  shell.py  skill.py  tasklist.py  web.py  worktree.py
aru/tui/: app.py  log_bridge.py  notifications.py  sanitize.py  sinks.py  themes.py
aru/tui/screens/: __init__.py  choice.py  confirm.py  keymap.py  session_picker.py  text_input.py
aru/tui/widgets/: chat.py  completer.py  context_pane.py  file_link.py  inline_choice.py  prompt_area.py  prompt_queue.py  tasklist_panel.py
docs/: TODO.md  memory-system-spec.md  opencode-core-spec.md  opencode-parameters-reference.md  plugins.md  token-metrics-guide.md  tools.md
docs-site/: index.md
docs-site/agentes/: index.md  planejamento.md  subagentes.md
docs-site/ferramentas/: index.md
docs/aru/: 2026-04-30-ctrlc-and-tui-investigation.md
docs/aru/plans/: 2026-04-19-multi-agent-cc-parity.md  2026-04-19-multi-agent-parity.md  2026-04-19-multi-agent-tier2-orchestration.md  2026-04-19-orchestrator-prompt-upgrade.md  2026-04-20-tier3-produto.md
docs/comparisons/: claude-code-vs-opencode-vs-aru.md
tests/: conftest.py  test_agents_base.py  test_agents_md_coverage.py  test_ast_tools.py  test_cache_patch_stop_reason.py  test_catalog.py  test_chat_scrollable.py  test_checkpoints.py  test_cli.py  test_cli_advanced.py  test_cli_base.py  test_cli_completers.py  test_cli_new.py  test_cli_run_cli.py  test_cli_session.py  test_cli_shell.py  test_codebase.py  test_confabulation_regression.py  test_config.py  test_context.py  test_cwd_awareness.py  test_delegate.py  test_doom_loop.py  test_events_schema.py  test_executor.py  test_fork_ctx_concurrency.py  test_format.py  test_guardrails_scenarios.py  test_indexer.py  test_invoke_skill.py  test_main.py  test_mcp_client.py  test_memory.py  test_permissions.py  test_planner.py  test_plugin_hooks_v2.py  test_plugins.py  test_providers.py  test_ranker.py  test_reasoning.py  (+23 more)
