[project]
name = "arc"
version = "0.1.0"
description = "A Claude Code clone built with Agno agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno",
    "anthropic",
    "chromadb>=0.5",
    "httpx",
    "pathspec>=0.12",
    "python-dotenv>=1.2.2",
    "prompt-toolkit>=3.0",
    "rich",
    "sqlalchemy>=2.0.48",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
]

[project.scripts]
arc = "arc.cli:main"
