[project]
name = "aru-code"
version = "0.1.0"
description = "A Claude Code clone built with Agno agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno",
    "anthropic",
    "httpx",
    "pathspec>=0.12",
    "art>=6.0",
    "python-dotenv>=1.2.2",
    "prompt-toolkit>=3.0",
    "rich",
    "sqlalchemy>=2.0.48",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "mcp>=1.0",
    "openai>=2.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
openai = ["openai>=1.0"]
ollama = ["ollama>=0.4"]
groq = ["groq>=0.4"]
all-providers = [
    "openai>=1.0",
    "ollama>=0.4",
    "groq>=0.4",
]

[project.scripts]
aru = "aru.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
