[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aru-code"
version = "0.11.1"
description = "A Claude Code clone built with Agno agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Estevao", email = "estevaofon@gmail.com" },
]
keywords = ["ai", "coding-assistant", "claude", "cli", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "agno>=2.5.10,<3",
    "anthropic",
    "httpx",
    "pathspec>=0.12",
    "python-dotenv>=1.2.2",
    "prompt-toolkit>=3.0",
    "rich",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "mcp>=1.0",
    "openai>=2.29.0",
    "filetype>=1.2",
]

[project.urls]
Homepage = "https://github.com/estevaofon/aru"
Repository = "https://github.com/estevaofon/aru"
Issues = "https://github.com/estevaofon/aru/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
openai = ["openai>=1.0"]
ollama = ["ollama>=0.4"]
groq = ["groq>=0.4"]
all-providers = [
    "openai>=1.0",
    "ollama>=0.4",
    "groq>=0.4",
]

[project.scripts]
aru = "aru.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
